<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/number_edit_text"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/padding_sixteen"
        android:layout_marginEnd="@dimen/padding_sixteen"
        android:layout_marginTop="@dimen/padding_thirty_six"
        android:background="@drawable/edit_text_border"
        android:hint="@string/edit_text_hint"
        android:importantForAutofill="no"
        android:inputType="number"
        android:padding="@dimen/padding_sixteen"
        android:textColor="@color/coffee"
        android:textSize="@dimen/input_text_size"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:id="@+id/button_one"
                style="@style/button_style"
                android:onClick="operationFunction"
                android:text="@string/button_one" />

            <Button
                android:id="@+id/button_two"
                style="@style/button_style"
                android:onClick="operationFunction"
                android:text="@string/button_two" />

            <Button
                android:id="@+id/button_three"
                style="@style/button_style"
                android:onClick="operationFunction"
                android:text="@string/button_three" />

            <Button
                android:id="@+id/button_plus"
                style="@style/button_style"
                android:layout_marginEnd="@dimen/margin_eight"
                android:onClick="operationFunction"
                android:text="@string/button_plus" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:id="@+id/button_four"
                style="@style/button_style"
                android:onClick="operationFunction"
                android:text="@string/button_four" />

            <Button
                android:id="@+id/button_five"
                style="@style/button_style"
                android:onClick="operationFunction"
                android:text="@string/button_five" />

            <Button
                android:id="@+id/button_six"
                style="@style/button_style"
                android:onClick="operationFunction"
                android:text="@string/button_six" />

            <Button
                android:id="@+id/button_minus"
                style="@style/button_style"
                android:layout_marginEnd="@dimen/margin_eight"
                android:onClick="operationFunction"
                android:text="@string/button_minus" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:id="@+id/button_seven"
                style="@style/button_style"
                android:onClick="operationFunction"
                android:text="@string/button_seven" />

            <Button
                android:id="@+id/button_eight"
                style="@style/button_style"
                android:onClick="operationFunction"
                android:text="@string/button_eight" />

            <Button
                android:id="@+id/button_nine"
                style="@style/button_style"
                android:onClick="operationFunction"
                android:text="@string/button_nine" />

            <Button
                android:id="@+id/button_multiplication"
                style="@style/button_style"
                android:layout_marginEnd="@dimen/margin_eight"
                android:onClick="operationFunction"
                android:text="@string/button_multiplication" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="4">

            <Button
                android:id="@+id/button_clear"
                style="@style/button_style"
                android:onClick="operationFunction"
                android:text="@string/button_clear" />

            <Button
                android:id="@+id/button_zero"
                style="@style/button_style"
                android:onClick="operationFunction"
                android:text="@string/button_zero" />

            <Button
                android:id="@+id/button_dot"
                style="@style/button_style"
                android:onClick="operationFunction"
                android:text="@string/button_dot" />

            <Button
                android:id="@+id/button_division"
                style="@style/button_style"
                android:layout_marginEnd="@dimen/margin_eight"
                android:onClick="operationFunction"
                android:text="@string/button_division" />
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_equals"
            style="@style/button_style"
            android:onClick="operationFunction"
        android:layout_marginEnd="@dimen/margin_eight"
            android:text="@string/button_equals" />
    </LinearLayout>
    </LinearLayout>
</RelativeLayout>